# fract

./: .gitignore  LICENSE  README.md
interface sketch/: README.md
interface sketch/code/: README.md  main.frag
interface sketch/code/DE-raytracers/: Default.frag
interface sketch/code/DEs/: Sphere.frag
interface sketch/code/common/: api.frag
interface sketch/conf/: main.json
interface sketch/conf/cameras/: Default.json
interface sketch/conf/examples/: sphere.json
interface_sketch/: README.md
interface_sketch/DEs/: sphere.cl
src/: BUILD.md  CMakeLists.txt  todo.txt
src/application/: controller.h  experimental-cpu-raytracer.cpp  experimental-cpu-raytracer.h  experimentation-application.cpp  main.cpp  monitest.cpp  normal-controller.cpp  normal-controller.h  ovr-controller.cpp  ovr-controller.h  vrtest.cpp
src/cl-util/: buffer.cpp  buffer.h  cl-common.h  command-queue.cpp  command-queue.h  context.cpp  context.h  event.cpp  event.h  kernel.cpp  kernel.h  texture-2d-ref.cpp  texture-2d-ref.h
src/cpu-raytracers/: test-raytracers.cpp  test-raytracers.h
src/experimental/: cubemap-experiment.h  fs-event-stream.cpp
src/gl-util/: framebuffer.cpp  framebuffer.h  gl-common.cpp  gl-common.h  glfw-util.cpp  glfw-util.h  quad-renderer.cpp  quad-renderer.h  shader.cpp  shader.h  texture2d.cpp  texture2d.h
src/lib/: README.md
src/lib/jsoncpp/: NOTES.md
src/lib/jsoncpp/lib/: lib_json.lib
src/lib/jsoncpp/src/: jsoncpp.cpp
src/raytracer/: controller.h  i-cpu-raytracer.h  i-raytracer.h  lookup-cube.h  normal-controller.cpp  normal-controller.h  ray-grid.h  raytraced-view.h  raytracer.cpp  raytracer.h  raytracing-engine.cpp  raytracing-engine.h  renderer.cpp  renderer.h
src/resources/: camera.cpp  camera.h  config.cpp  config.h  shader-preprocessor.cpp  shader-preprocessor.h  shader-provider.cpp  shader-provider.h
src/shaders/: README.md  conf.json  main.frag  pass.vert
src/shaders/Common/: Common.frag  Raytracer-Api.frag  Renderer-Api.frag  Structures.frag
src/shaders/Examples/: Benchmark.frag  Mandelbox.frag  Mandelbulb.frag  MoreSpheres.frag  Sphere.frag  Spheres.frag  Spikes.frag  Voronoi.frag  Voronoi2.frag  Voronoi3.frag
src/shaders/Predefined/: PerspectiveCamera.frag  README.md  pass.vert
src/shaders/Raytracers/: DE-Raytracer.frag
src/shaders/Renderers/: Default.frag
src/util/: camera.cpp  camera.h  debug.cpp  debug.h  exceptions.cpp  exceptions.h  file-watcher.cpp  file-watcher.h  json.cpp  json.h  logging.cpp  logging.h  mat.cpp  mat.h  quat.h  stopwatch.cpp  stopwatch.h  string-util.cpp  string-util.h  vec.h
src/vr/: ovr-util.h
